Bug 266997 - Rekonq crashes when opening browser's identification
Summary: Rekonq crashes when opening browser's identification
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.6.80
Platform: unspecified Linux
: NOR crash
Target Milestone: 0.7
Assignee: Andrea Diamantini
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-23 18:10 UTC by nameless01
Modified: 2011-02-28 16:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nameless01 2011-02-23 18:10:25 UTC
Application: rekonq (0.6.80)
KDE Platform Version: 4.6.00 (4.6.0)
Qt Version: 4.7.1
Operating System: Linux 2.6.37-CHAKRA i686

-- Information about the crash:
- What I was doing when the application crashed:

The browser's identification menu always fails to open. I use rekonq 0.6.8 on Chakra Linux.

The crash can be reproduced every time.

-- Backtrace:
Application: rekonq (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0xb5744710 (LWP 7762))]

Thread 12 (Thread 0xaf470b70 (LWP 7763)):
#0  0xb76ff424 in __kernel_vsyscall ()
#1  0xb6cb53fc in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb44b34b7 in WTF::TCMalloc_PageHeap::scavengerThread() () from /usr/lib/libQtWebKit.so.4
#3  0xb44b3501 in WTF::TCMalloc_PageHeap::runScavengerThread(void*) () from /usr/lib/libQtWebKit.so.4
#4  0xb6cb0e60 in start_thread () from /lib/libpthread.so.0
#5  0xb5ffbfbe in clone () from /lib/libc.so.6

Thread 11 (Thread 0xae86db70 (LWP 7764)):
#0  0xb76ff424 in __kernel_vsyscall ()
#1  0xb6cb53fc in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb6d290ef in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#3  0xb30f4fe0 in ?? () from /usr/lib/libthreadweaver.so.4
#4  0xb30f7c7c in ?? () from /usr/lib/libthreadweaver.so.4
#5  0xb30f4c2b in ?? () from /usr/lib/libthreadweaver.so.4
#6  0xb30f7d6a in ?? () from /usr/lib/libthreadweaver.so.4
#7  0xb30f4b73 in ?? () from /usr/lib/libthreadweaver.so.4
#8  0xb30f678e in ?? () from /usr/lib/libthreadweaver.so.4
#9  0xb30f684b in ThreadWeaver::Thread::run() () from /usr/lib/libthreadweaver.so.4
#10 0xb6d28881 in QThreadPrivate::start(void*) () from /usr/lib/libQtCore.so.4
#11 0xb6cb0e60 in start_thread () from /lib/libpthread.so.0
#12 0xb5ffbfbe in clone () from /lib/libc.so.6

Thread 10 (Thread 0xa75aeb70 (LWP 7765)):
#0  0xb76ff424 in __kernel_vsyscall ()
#1  0xb6cb53fc in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb6d290ef in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#3  0xb30f4fe0 in ?? () from /usr/lib/libthreadweaver.so.4
#4  0xb30f7c7c in ?? () from /usr/lib/libthreadweaver.so.4
#5  0xb30f4c2b in ?? () from /usr/lib/libthreadweaver.so.4
#6  0xb30f7d6a in ?? () from /usr/lib/libthreadweaver.so.4
#7  0xb30f4b73 in ?? () from /usr/lib/libthreadweaver.so.4
#8  0xb30f7d89 in ?? () from /usr/lib/libthreadweaver.so.4
#9  0xb30f4b73 in ?? () from /usr/lib/libthreadweaver.so.4
#10 0xb30f678e in ?? () from /usr/lib/libthreadweaver.so.4
#11 0xb30f684b in ThreadWeaver::Thread::run() () from /usr/lib/libthreadweaver.so.4
#12 0xb6d28881 in QThreadPrivate::start(void*) () from /usr/lib/libQtCore.so.4
#13 0xb6cb0e60 in start_thread () from /lib/libpthread.so.0
#14 0xb5ffbfbe in clone () from /lib/libc.so.6

Thread 9 (Thread 0xa6dadb70 (LWP 7766)):
#0  0xb76ff424 in __kernel_vsyscall ()
#1  0xb6cb53fc in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb6d290ef in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#3  0xb30f4fe0 in ?? () from /usr/lib/libthreadweaver.so.4
#4  0xb30f7c7c in ?? () from /usr/lib/libthreadweaver.so.4
#5  0xb30f4c2b in ?? () from /usr/lib/libthreadweaver.so.4
#6  0xb30f7d6a in ?? () from /usr/lib/libthreadweaver.so.4
#7  0xb30f4b73 in ?? () from /usr/lib/libthreadweaver.so.4
#8  0xb30f678e in ?? () from /usr/lib/libthreadweaver.so.4
#9  0xb30f684b in ThreadWeaver::Thread::run() () from /usr/lib/libthreadweaver.so.4
#10 0xb6d28881 in QThreadPrivate::start(void*) () from /usr/lib/libQtCore.so.4
#11 0xb6cb0e60 in start_thread () from /lib/libpthread.so.0
#12 0xb5ffbfbe in clone () from /lib/libc.so.6

Thread 8 (Thread 0xa4fffb70 (LWP 7767)):
#0  0xb76ff424 in __kernel_vsyscall ()
#1  0xb6cb57a4 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb6d29011 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#3  0xb6d1ccc1 in QThreadPoolThread::run() () from /usr/lib/libQtCore.so.4
#4  0xb6d28881 in QThreadPrivate::start(void*) () from /usr/lib/libQtCore.so.4
#5  0xb6cb0e60 in start_thread () from /lib/libpthread.so.0
#6  0xb5ffbfbe in clone () from /lib/libc.so.6

Thread 7 (Thread 0xa47feb70 (LWP 7768)):
#0  0xb76ff424 in __kernel_vsyscall ()
#1  0xb6cb57a4 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb6d29011 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#3  0xb6d1ccc1 in QThreadPoolThread::run() () from /usr/lib/libQtCore.so.4
#4  0xb6d28881 in QThreadPrivate::start(void*) () from /usr/lib/libQtCore.so.4
#5  0xb6cb0e60 in start_thread () from /lib/libpthread.so.0
#6  0xb5ffbfbe in clone () from /lib/libc.so.6

Thread 6 (Thread 0xa3ffdb70 (LWP 7769)):
#0  0xb76ff424 in __kernel_vsyscall ()
#1  0xb6cb57a4 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb6d29011 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#3  0xb6d1ccc1 in QThreadPoolThread::run() () from /usr/lib/libQtCore.so.4
#4  0xb6d28881 in QThreadPrivate::start(void*) () from /usr/lib/libQtCore.so.4
#5  0xb6cb0e60 in start_thread () from /lib/libpthread.so.0
#6  0xb5ffbfbe in clone () from /lib/libc.so.6

Thread 5 (Thread 0xa37fcb70 (LWP 7770)):
#0  0xb76ff424 in __kernel_vsyscall ()
#1  0xb6cb57a4 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb6d29011 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#3  0xb6d1ccc1 in QThreadPoolThread::run() () from /usr/lib/libQtCore.so.4
#4  0xb6d28881 in QThreadPrivate::start(void*) () from /usr/lib/libQtCore.so.4
#5  0xb6cb0e60 in start_thread () from /lib/libpthread.so.0
#6  0xb5ffbfbe in clone () from /lib/libc.so.6

Thread 4 (Thread 0xa2ffbb70 (LWP 7771)):
#0  0xb76ff424 in __kernel_vsyscall ()
#1  0xb6cb57a4 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb6d29011 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#3  0xb6d1ccc1 in QThreadPoolThread::run() () from /usr/lib/libQtCore.so.4
#4  0xb6d28881 in QThreadPrivate::start(void*) () from /usr/lib/libQtCore.so.4
#5  0xb6cb0e60 in start_thread () from /lib/libpthread.so.0
#6  0xb5ffbfbe in clone () from /lib/libc.so.6

Thread 3 (Thread 0xa27fab70 (LWP 7772)):
#0  0xb76ff424 in __kernel_vsyscall ()
#1  0xb6cb57a4 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb6d29011 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#3  0xb6d1ccc1 in QThreadPoolThread::run() () from /usr/lib/libQtCore.so.4
#4  0xb6d28881 in QThreadPrivate::start(void*) () from /usr/lib/libQtCore.so.4
#5  0xb6cb0e60 in start_thread () from /lib/libpthread.so.0
#6  0xb5ffbfbe in clone () from /lib/libc.so.6

Thread 2 (Thread 0xa1ff9b70 (LWP 7773)):
#0  0xb76ff424 in __kernel_vsyscall ()
#1  0xb6cb57a4 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb6d29011 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#3  0xb6d1ccc1 in QThreadPoolThread::run() () from /usr/lib/libQtCore.so.4
#4  0xb6d28881 in QThreadPrivate::start(void*) () from /usr/lib/libQtCore.so.4
#5  0xb6cb0e60 in start_thread () from /lib/libpthread.so.0
#6  0xb5ffbfbe in clone () from /lib/libc.so.6

Thread 1 (Thread 0xb5744710 (LWP 7762)):
[KCrash Handler]
#7  0xb717a5d0 in KSycocaEntry::property(QString const&) const () from /usr/lib/libkdecore.so.5
#8  0xb23f6da5 in UserAgentInfo::userAgentDescription (this=0xbfee8af4, i=0) at /home/cyril/Téléchargements/rekonq-0.6.80/src/useragent/useragentinfo.cpp:131
#9  0xb23f6f8b in UserAgentInfo::availableUserAgents (this=0xbfee8af4) at /home/cyril/Téléchargements/rekonq-0.6.80/src/useragent/useragentinfo.cpp:144
#10 0xb2380805 in MainWindow::populateUserAgentMenu (this=0x9911ff8) at /home/cyril/Téléchargements/rekonq-0.6.80/src/mainwindow.cpp:1534
#11 0xb2382806 in MainWindow::qt_metacall (this=0x9911ff8, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0xbfee8c5c)
    at /home/cyril/Téléchargements/rekonq-0.6.80/build/src/mainwindow.moc:201
#12 0xb6e3675c in QMetaObject::metacall(QObject*, QMetaObject::Call, int, void**) () from /usr/lib/libQtCore.so.4
#13 0xb6e47587 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#14 0xb67722c7 in QMenu::aboutToShow() () from /usr/lib/libQtGui.so.4
#15 0xb6775df7 in QMenu::popup(QPoint const&, QAction*) () from /usr/lib/libQtGui.so.4
#16 0xb6778e75 in QMenu::internalDelayedPopup() () from /usr/lib/libQtGui.so.4
#17 0xb67793b6 in QMenu::timerEvent(QTimerEvent*) () from /usr/lib/libQtGui.so.4
#18 0xb6e46e74 in QObject::event(QEvent*) () from /usr/lib/libQtCore.so.4
#19 0xb62f9ce2 in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#20 0xb677ae97 in QMenu::event(QEvent*) () from /usr/lib/libQtGui.so.4
#21 0xb6297f11 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#22 0xb629d41e in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#23 0xb750b67a in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#24 0xb6e2f70b in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#25 0xb6e637a9 in QTimerInfoList::activateTimers() () from /usr/lib/libQtCore.so.4
#26 0xb6e5fdb7 in idleTimerSourceDispatch(_GSource*, int (*)(void*), void*) () from /usr/lib/libQtCore.so.4
#27 0xb5ab9b02 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#28 0xb5aba2e0 in ?? () from /usr/lib/libglib-2.0.so.0
#29 0xb5aba594 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#30 0xb6e604fc in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#31 0xb6358085 in QGuiEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtGui.so.4
#32 0xb6e2e0b9 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#33 0xb6e2e35a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#34 0xb6776994 in QMenu::exec(QPoint const&, QAction*) () from /usr/lib/libQtGui.so.4
#35 0xb67c45e9 in QToolButtonPrivate::popupTimerDone() () from /usr/lib/libQtGui.so.4
#36 0xb67c4dbd in QToolButtonPrivate::_q_buttonPressed() () from /usr/lib/libQtGui.so.4
#37 0xb67c5016 in QToolButton::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libQtGui.so.4
#38 0xb6e3675c in QMetaObject::metacall(QObject*, QMetaObject::Call, int, void**) () from /usr/lib/libQtCore.so.4
#39 0xb6e47587 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#40 0xb6a22397 in QAbstractButton::pressed() () from /usr/lib/libQtGui.so.4
#41 0xb66db3f9 in QAbstractButtonPrivate::emitPressed() () from /usr/lib/libQtGui.so.4
#42 0xb66dc1ae in QAbstractButton::mousePressEvent(QMouseEvent*) () from /usr/lib/libQtGui.so.4
#43 0xb67c519e in QToolButton::mousePressEvent(QMouseEvent*) () from /usr/lib/libQtGui.so.4
#44 0xb62f9de1 in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#45 0xb66dbffe in QAbstractButton::event(QEvent*) () from /usr/lib/libQtGui.so.4
#46 0xb67c380a in QToolButton::event(QEvent*) () from /usr/lib/libQtGui.so.4
#47 0xb6297f11 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#48 0xb629e132 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#49 0xb750b67a in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#50 0xb6e2f70b in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#51 0xb62993d0 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib/libQtGui.so.4
#52 0xb632e0c4 in QETWidget::translateMouseEvent(_XEvent const*) () from /usr/lib/libQtGui.so.4
#53 0xb632cc08 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/libQtGui.so.4
#54 0xb63584aa in x11EventSourceDispatch(_GSource*, int (*)(void*), void*) () from /usr/lib/libQtGui.so.4
#55 0xb5ab9b02 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#56 0xb5aba2e0 in ?? () from /usr/lib/libglib-2.0.so.0
#57 0xb5aba594 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#58 0xb6e604fc in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#59 0xb6358085 in QGuiEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtGui.so.4
#60 0xb6e2e0b9 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#61 0xb6e2e35a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#62 0xb6e33ecf in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#63 0xb6295cd7 in QApplication::exec() () from /usr/lib/libQtGui.so.4
#64 0xb24002b0 in kdemain (argc=1, argv=0x9840910) at /home/cyril/Téléchargements/rekonq-0.6.80/src/main.cpp:205
#65 0x0804dfa9 in _start ()

Reported using DrKonqi
Comment 1 Andrea Diamantini 2011-02-28 12:38:14 UTC
I'm working on preventing rekonq to crash in such situations. Anyway, I truly think this crash depends on a broken KDE installation in your system. It seems you are missing some runtime deps like the UA services.
Comment 2 Andrea Diamantini 2011-02-28 16:00:53 UTC
Git commit c9ab4595a61640c157f55c1d7908d8fc6bf2ec9e by Andrea Diamantini.
Committed on 28/02/2011 at 15:58.
Pushed by adjam into branch 'master'.

Prevents rekonq from crash if an UA service cannot be found.
This fix needs IMHO an extra informational string that will be postponed to after 0.7 stable
release.

BUG:266997

M  +20   -8    src/useragent/useragentinfo.cpp     
M  +2    -0    src/useragent/useragentinfo.h     

http://commits.kde.org/rekonq/c9ab4595a61640c157f55c1d7908d8fc6bf2ec9e