Prevents rekonq from crash if an UA service cannot be found. This fix needs IMHO an extra informational string that will be postponed to after 0.7 stable release.

BUG:266997